--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -18802,7 +18802,7 @@ body.page-layout-1column .block.widget .owl-nav button.owl-next {
     direction: rtl
 }
 .footer-2-w {
-    background-color: #bb9982;
+    background-color: #000000;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover
