--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -18394,7 +18394,7 @@ body.cms-index-index .page-title-wrapper {
     display: none
 }
 .index-row-2 {
-    background-color: #f3f2fb
+    background-color: #ece5e1
 }
 .index-row-2 .in {
     text-align: center;
@@ -18421,7 +18421,7 @@ body.cms-index-index .page-title-wrapper {
 .index-row-2 .in .row-col .col-r img {
     position: relative;
     margin-top: -5rem;
-    right: -4rem
+    right: -29rem
 }
 .index-row-2 .in .row-col .col-l {
     width: 50%;
